# xous-core

./: Cargo.toml
apps/: manifest.json
apps/ecdh-test/: Cargo.toml
apps/ecdh-test/src/: main.rs  ui.rs
bao1x-boot/boot1/src/: main.rs  secboot.rs
