[package]
name = "ecdh-test"
version = "0.1.0"
authors = ["Astra <astra@example.com>"]
edition = "2021"
description = "X25519 ECDH test app for Precursor"

[dependencies]
log = "0.4.14"
num-derive = { version = "0.3.3", default-features = false}
num-traits = { version = "0.2.14", default-features = false}
xous = "0.9.67"
xous-ipc = "0.10.7"
log-server = { package = "xous-api-log", version = "0.1.66" }
ticktimer-server = { package = "xous-api-ticktimer", version = "0.9.66" }
xous-names = { package = "xous-api-names", version = "0.9.68" }
gam = { path = "../../services/gam" }
graphics-server = { path = "../../services/graphics-server" }
trng = { path = "../../services/trng"}
locales = { path = "../../locales"}
ime-plugin-api = { path = "../../services/ime-plugin-api"}
ime-plugin-shell = { path = "../../services/ime-plugin-shell"}

# Crypto for ECDH testing
x25519-dalek = { version = "=2.0.1", default-features = false, features = ["static_secrets"] }
curve25519-dalek = { version = "=4.1.2", default-features = false }
heapless = "0.8"

[features]
precursor = ["gam/precursor", "graphics-server/precursor"]
hosted = ["gam/hosted", "graphics-server/hosted"]
renode = ["gam/renode", "graphics-server/renode"]
